--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
 
 
-:root{
-    --primary-color: #033b4a;
-    --secondary-color : #20c997;
-    --gray : #4a4a4d;
-    --bg-primary: #ecf0f3;
-}
 * {
     margin: 0;
     padding: 0;
@@ -16,9 +10,19 @@
 
 }
 
+html {
+    scale: ;
+}
+
 body {
     font-family: "Poppins", sans-serif;
+   
+  
+
 }
+
+
+
 
 h1,
 h2 {
@@ -29,10 +33,107 @@ h2 {
 
 header {
     background-color: var(--bg-primary);
-    height: 100vh;
+    height: 80px;
 }
 
 header .navbar {
-    background-color: #fff;
+    background-color: #dad7d7;
+    border-bottom: 1px solid #ccc;
+    position: fixed;
+    width: 100%;
+    padding: 1.5rem 2rem;
 }
-/* ...............................................................Header End */
+header .navbar nav {
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin: auto;
+
+
+}
+header .navbar nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header .navbar nav ul a {
+    margin: 0 35px;
+    color: var(--primary-color);
+    font-weight: 600;
+    /* ...............................................................Header End */
+}
+
+.content {
+    height: 700px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 1px solid black;
+    margin: 20px;
+    padding: 10px;
+}
+
+
+.content .content-text {
+    height: 100%;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+
+.content-text .test h1 {
+    color:black;
+    background-color: #dad7d7;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.content-text .test .first-p {
+    color:black;
+    line-height: 30px;
+}
+
+.content .content-text .img1 {
+
+    background-color: aquamarine;
+    border: 1px solid black;
+    height: 100%;
+    width: 50%;
+
+
+}
+
+
+
+.content-text .text p {
+    width: 300px;
+}
+
+content-text img {
+    width: 250px;
+    height: 250px;
+
+}
+
+.how {
+    height: 700px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 1px solid black;
+    margin: 20px;
+    padding: 10px;
+  
+}
+
+
+.resources {
+
+    height: 600px;
+    border: 1px solid black;
+}
