Add section two, and added external links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 html {
-    scale: ;
+    scroll-behavior:smooth ;
 }
 
 body {
@@ -25,14 +25,16 @@ body {
 
 
 h1,
-h2 {
+h2,
+h3
+{
+
     font-family: "Saira", sans-serif;
 }
 
 /* ...............................................................Header Sart */
 
 header {
-    background-color: var(--bg-primary);
     height: 80px;
 }
 
@@ -59,9 +61,15 @@ header .navbar nav ul {
 
 header .navbar nav ul a {
     margin: 0 35px;
-    color: var(--primary-color);
     font-weight: 600;
+    color: black;
+    text-transform: uppercase;  
+    transition: 0.3s ease;
     /* ...............................................................Header End */
+}
+
+header .navbar nav ul a:hover {
+    color: white;
 }
 
 .content {
@@ -69,7 +77,6 @@ header .navbar nav ul a {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border: 1px solid black;
     margin: 20px;
     padding: 10px;
 }
@@ -83,7 +90,6 @@ header .navbar nav ul a {
     align-items: center;
 
 }
-
 
 
 .content-text .test h1 {
@@ -100,8 +106,6 @@ header .navbar nav ul a {
 
 .content .content-text .img1 {
 
-    background-color: aquamarine;
-    border: 1px solid black;
     height: 100%;
     width: 50%;
 
@@ -120,7 +124,71 @@ content-text img {
 
 }
 
-.how {
+
+
+.parent-roblox  {
+    height: 700px;
+    width: 100%;
+    background-color: #dad7d7;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  
+    padding: 10px;
+  
+}
+
+.parent-roblox .col1 {
+    margin-top: 70px;
+    height: 100%;
+    width: 45%;
+    padding: 30px;
+
+}
+
+
+
+ .col1-text h3 {
+    color:black;
+    background-color: rgba(255, 255, 255, 0.717);
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    font-size: 20px;
+    padding: 15px;
+}
+
+ .col1 .col1-text p {
+
+    color:black;
+    line-height: 40px;
+    height: 100%;
+    font-size: 18px;
+
+}
+
+
+.col1 .col1-text p a {
+
+    color: red;
+}
+
+
+
+.parent-roblox .col2 col2-text {
+    height: 100%;
+    width: 40%;
+    padding: 30px;
+    margin: 10px; {
+    border: 1px solid black;
+    padding: 10px;
+    margin-top: 60px;;
+
+
+
+}
+
+.resourses {
+
     height: 700px;
     display: flex;
     justify-content: space-evenly;
@@ -128,12 +196,21 @@ content-text img {
     border: 1px solid black;
     margin: 20px;
     padding: 10px;
-  
 }
 
-
-.resources {
-
-    height: 600px;
+.resourses .col3 {
+    height: 100%;
+    width: 40%;
     border: 1px solid black;
+    padding: 30px;
+    margin: 10px;
+
+}
+.resourses .col4 {
+    height: 100%;
+    width: 40%;
+    border: 1px solid black;
+    padding: 30px;
+    margin: 10px;
+
 }
