--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,8 @@ html {
 body {
     font-family: "Poppins", sans-serif;
    
-  
 
 }
-
-
-
 
 h1,
 h2,
@@ -32,7 +28,6 @@ h3
     font-family: "Saira", sans-serif;
 }
 
-/* ...............................................................Header Sart */
 
 header {
     height: 80px;
@@ -44,12 +39,17 @@ header .navbar {
     position: fixed;
     width: 100%;
     padding: 1.5rem 2rem;
+
 }
 header .navbar nav {
 display: flex;
 justify-content: space-between;
 align-items: center;
 margin: auto;
+
+#home .navbar #logo{ 
+color: aqua;
+}
 
 
 }
@@ -65,7 +65,6 @@ header .navbar nav ul a {
     color: black;
     text-transform: uppercase;  
     transition: 0.3s ease;
-    /* ...............................................................Header End */
 }
 
 header .navbar nav ul a:hover {
@@ -81,7 +80,6 @@ header .navbar nav ul a:hover {
     padding: 10px;
 }
 
-
 .content .content-text {
     height: 100%;
     width: 40%;
@@ -90,7 +88,6 @@ header .navbar nav ul a:hover {
     align-items: center;
 
 }
-
 
 .content-text .test h1 {
     color:black;
@@ -109,10 +106,7 @@ header .navbar nav ul a:hover {
     height: 100%;
     width: 50%;
 
-
 }
-
-
 
 .content-text .text p {
     width: 300px;
@@ -123,30 +117,24 @@ content-text img {
     height: 250px;
 
 }
-
-
-
 .parent-roblox  {
-    height: 700px;
+    height: 900px;
     width: 100%;
     background-color: #dad7d7;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-  
-    padding: 10px;
+      padding: 10px;
   
 }
 
 .parent-roblox .col1 {
-    margin-top: 70px;
-    height: 100%;
+    margin-top: 100px;
+    height: 80%;
     width: 45%;
-    padding: 30px;
+    padding: 50px 30px 30px;
 
 }
-
-
 
  .col1-text h3 {
     color:black;
@@ -163,7 +151,6 @@ content-text img {
     line-height: 40px;
     height: 100%;
     font-size: 18px;
-
 }
 
 
@@ -173,29 +160,24 @@ content-text img {
 }
 
 
-
 .parent-roblox .col2 col2-text {
     height: 100%;
     width: 40%;
     padding: 30px;
-    margin: 10px; {
+    margin: 10px; 
     border: 1px solid black;
     padding: 10px;
     margin-top: 60px;;
-
-
-
 }
 
 .resourses {
-
+display: flex;
     height: 700px;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border: 1px solid black;
-    margin: 20px;
-    padding: 10px;
+      padding: 10px;
 }
 
 .resourses .col3 {
