--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,15 +7,18 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-
-}
-
-html {
     scroll-behavior:smooth ;
+
+
+
 }
+
+
 
 body {
     font-family: "Poppins", sans-serif;
+    display: flex;
+    flex-direction: column;
    
 
 }
