--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,21 +7,19 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    scroll-behavior:smooth ;
-
-
+    scroll-behavior: smooth;
 
 }
-
 
 
 body {
     font-family: "Poppins", sans-serif;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-   
+    width: 100%;
 
-}
+   }
 
 h1,
 h2,
@@ -31,171 +29,73 @@ h3
     font-family: "Saira", sans-serif;
 }
 
-
 header {
-    height: 80px;
-}
 
-header .navbar {
-    background-color: #dad7d7;
-    border-bottom: 1px solid #ccc;
+    display: flex;
+    flex-direction: column;
     position: fixed;
     width: 100%;
-    padding: 1.5rem 2rem;
-
-}
-header .navbar nav {
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin: auto;
-
-#home .navbar #logo{ 
-color: aqua;
+    z-index: 999;
+    
 }
 
-
-}
-header .navbar nav ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-header .navbar nav ul a {
-    margin: 0 35px;
-    font-weight: 600;
+.header-logo h1 {
+    background-color: rgb(217, 219, 218);
     color: black;
-    text-transform: uppercase;  
-    transition: 0.3s ease;
-}
-
-header .navbar nav ul a:hover {
-    color: white;
-}
-
-.content {
-    height: 700px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 20px;
-    padding: 10px;
-}
-
-.content .content-text {
-    height: 100%;
-    width: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.content-text .test h1 {
-    color:black;
-    background-color: #dad7d7;
     text-transform: uppercase;
-    margin-bottom: 20px;
-}
-
-.content-text .test .first-p {
-    color:black;
-    line-height: 30px;
-}
-
-.content .content-text .img1 {
-
-    height: 100%;
-    width: 50%;
+    letter-spacing: 2px;
+    text-align: center;
+    font-size: 1.8rem;
+    padding: 5px 0;
 
 }
 
-.content-text .text p {
-    width: 300px;
-}
 
-content-text img {
-    width: 250px;
-    height: 250px;
-
-}
-.parent-roblox  {
-    height: 900px;
-    width: 100%;
-    background-color: #dad7d7;
+nav ul {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-      padding: 10px;
+    padding: 5px 0;
+    font-size: 1rem;
+    background-color: white;
   
 }
 
-.parent-roblox .col1 {
-    margin-top: 100px;
-    height: 80%;
-    width: 45%;
-    padding: 50px 30px 30px;
-
-}
-
- .col1-text h3 {
-    color:black;
-    background-color: rgba(255, 255, 255, 0.717);
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    font-size: 20px;
-    padding: 15px;
-}
-
- .col1 .col1-text p {
-
-    color:black;
-    line-height: 40px;
-    height: 100%;
-    font-size: 18px;
-}
-
-
-.col1 .col1-text p a {
-
-    color: red;
-}
-
-
-.parent-roblox .col2 col2-text {
-    height: 100%;
-    width: 40%;
-    padding: 30px;
-    margin: 10px; 
-    border: 1px solid black;
-    padding: 10px;
-    margin-top: 60px;;
-}
-
-.resourses {
+nav ul li a {
+color: black;
+text-transform: uppercase;
 display: flex;
-    height: 700px;
-    width: 100%;
+justify-content: space-between;
+font-weight: 600;
+padding: 10px;
+transition: 0.3s;
+
+}
+nav ul li a:hover {
+    background-color:  rgb(217, 219, 218);
+    color: rgba(0, 0, 255, 0.874);
+
+    
+}
+
+main {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
     align-items: center;
-      padding: 10px;
+    margin-top: 50px;
 }
 
-.resourses .col3 {
-    height: 100%;
-    width: 40%;
-    border: 1px solid black;
-    padding: 30px;
-    margin: 10px;
+section { 
+
+    width: 70%;
+    padding: 50px 200px;
+    display: flex;
+    justify-content: center;
 
 }
-.resourses .col4 {
-    height: 100%;
-    width: 40%;
-    border: 1px solid black;
-    padding: 30px;
-    margin: 10px;
+
+footer {
+    background-color: rgb(217, 219, 218);
+    height: 70px;
 
 }
