--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,7 @@ color:#FBFBFB ;
 #partner-guid {
   height: 80vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   background-color: #FBFBFB;
 }
@@ -154,9 +154,9 @@ color:#FBFBFB ;
 #partner-guid .partner-content {
 
   display: flex;
-  justify-content: space-between;
-}
+  flex-direction: column;
 
+}
 
 
   
