--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,12 +208,18 @@ text-align: center;
 }
 
 #report .report-content h2 {
-  color:  #426FB2;
+  color:  orange;
+  font-weight: bold;
+
 
 }
 
+#report .report-content p {
+  color: white;
+}
+
 #report .report-content a {
-  color: red;
+  color: orange;
   text-decoration: underline;
 }
 
@@ -228,17 +234,19 @@ text-align: center;
 }
 
 #report .call h2 {
-color:  #426FB2;
+color:  orange;
 padding: 0 12px;
+font-weight: bold;
 }
 #report .call p {
 padding: 20px 60px;
 line-height: 25px;
+color: white;
 }
 
 #report .call a {
 
-color: red;
+color: orange;
 text-decoration: underline;
 
 }
