fixed navbart links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ color:#FBFBFB ;
 
   /* Partner Guid Section Start */
 
-  #partner-guid {
+  #parents-guid {
     background-color: #FBFBFB;
     height: 90vh;
     display: flex;
