Edit all code with boostap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,414 +12,9 @@
 
 body {
     font-family: "Poppins", sans-serif;
-}
-
-
-a {
-  color: #FBFBFB;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: 600;
-
-}
-
-ul {
-  list-style: none;
-}
-
-h1,
-h2,
-h3 {
-
-  font-family: "Saira", sans-serif;
-}
-
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 15px;
-  display: flex;
-  justify-content: space-between;
-  gap: 100px;
-
-}
-  /* Header Start */
-
-header {
-    height: 100vh;
-    background: url("../images/safeguard-about-micellar-background-dt.jpg") no-repeat center center/cover ;
-    position: relative;
-}
-#navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#navbar img {
-    width: 80px;
-    margin-left: 100px;
-    margin-top: 5px;
-}
-
-#navbar ul {
-    display: flex;
-    margin-right: 100px;
-}
-
-
-#navbar ul li a {
-    
-    padding: 15px 20px;
-
-}
-
-
-#navbar ul li a:hover {
-
-    border-bottom: 2px solid #e4b95b;
-    color: #e4b95b;
-}
-.content{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;    
-    height: 75%;
-    
-}
-
-.content  .content-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center
   }
 
-header .content  img {
-    width: 600px;
-}
-
-header .content h1 {
-font-size: 30px;
-background-color: #fbfbfb9e;
-letter-spacing: 3px;
-}
-
-header .content p {
-margin: 20px 0 40px 20px;
-max-width: 600px;
-line-height: 40px;
-letter-spacing: 1px;
-font-size: 20px;
-color:#FBFBFB ;
-}
-
-.btn {
-    display: inline-block;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    margin-right: 40px;
-  }
-  
-  .btn-primary {
-    border: 1px solid #fff;
-  }
-  
-  .btn-secondary,
-  .btn-third:hover {
-    background: #383848;
-  }
-  
-  .btn-primary:hover,
-  .btn-secondary:hover,
-  .btn-third {
-    background: #e4b95bf5;
-  }
-  
-  .primary-text {
-    color: #e4b95b;
-  }
-  
-  /* <!-- Header End --> */
-
-  /* Partner Guid Section Start */
-
-  #parents-guid {
-    background-color: #FBFBFB;
-    height: 90vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-
-  }
-  .partner-content{
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px ;
-}
-
-.partner-content .col2 h2 {
-
-margin: 10px 0;
-border-left: 10px solid #426FB2;
-border-right: 10px solid #426FB2;
-padding-left: 3px;
-text-align: center;
-}
-
-.partner-content .col2 a  {
-  display: block;
-  color:  #426FB2;
-  text-decoration: underline;
-  font-weight: bold;
-  letter-spacing: 2px;
-  text-align: center;
-
-}
-
-  
-  /* Partner Guid Section Start */
-
-
-
-
-
-
-#report {
-  background-color: #426FB2;
-    height: 90vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-
-#report .report-content {
-
-  width: 50%;
-  border: 3px solid black;
-  border-radius: 10px 10px 60px 10px;
-  padding: 20px
-}
-
-#report .report-content h2 {
-  color:  orange;
-  font-weight: bold;
+.section {
 
 
 }
-
-#report .report-content p {
-  color: white;
-}
-
-#report .report-content a {
-  color: orange;
-  text-decoration: underline;
-}
-
-#report .call {
-
-  width: 50%;
-  
-  border: 3px solid black;
-  border-radius: 10px 10px 10px 60px;
-  padding: 20px
-
-}
-
-#report .call h2 {
-color:  orange;
-padding: 0 12px;
-font-weight: bold;
-}
-#report .call p {
-padding: 20px 60px;
-line-height: 25px;
-color: white;
-}
-
-#report .call a {
-
-color: orange;
-text-decoration: underline;
-
-}
-footer {
-  background-color: FBFBFB;
-  height: 60px;
-
-
-}
-footer  p{
-color: #426FB2;
-text-align: center;
-padding: 20px;
-font-size: 18px;
-margin: 0 auto;
-}
-/* 
-
-@media (max-width: 425px) {
-
-.container {
-
-  max-width: 450ex;
-  display: flex;
-  flex-direction: column;
-
-}
-
-}
-
-header {
-
-}
-#navbar {
-
-display: flex;
-flex-direction: column;
-justify-content: center;
-
-}
-
-#navbar img {
-display: none;
-}
-
-.content {
-display: flex;
-flex-direction: column;
-}
-
-
-#navbar ul {
-
-margin: 15px auto;
-}
-
-header .content  img {
-width:   300px;
-
-}
-
-header .content h1 {
-font-size: 25px;
-margin-top: 10px;
-}
-
-
-header .content p {
-font-size: 15px;
-}
-
-.content-text a  {
-display: none;
-}
-
-
-#partner-guid {
-display: flex;
-flex-direction: column;
-
-}
-
-
-.partner-content .col1 h2 {
-
-text-align: center;
-
-}
-#report {
-display: flex;
-flex-direction: column;
-justify-content: center;
-}
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-
-.container {
-
-max-width: 800px;
-display: flex;
-flex-direction: column;
-
-}
-
-  header {
-
-  }
-#navbar {
-  
-display: flex;
-flex-direction: column;
-justify-content: center;
-
-}
-
-#navbar img {
-  display: none;
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-}
-
-
-#navbar ul {
-
-  margin: 15px auto;
-}
-
-header .content  img {
-width:   300px;
-
-}
-
-header .content h1 {
-  font-size: 25px;
-  margin-top: 10px;
-}
-
-
-header .content p {
-  font-size: 15px;
-}
-
-.content-text a  {
-  display: none;
-}
-
-
-#partner-guid {
-display: flex;
-flex-direction: column;
-
-}
-
-
-.partner-content .col1 h2 {
-
-  text-align: center;
-
-}
-#report {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-} */
